methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:15: error: type mismatch;
 found   : Unit
 required: Boolean
  depart = false
         ^