methods.slug.SlugTracking.scala.code
var depart = true
def isFacingTrail():Boolean = {
  if (depart == true){
  	avance()
  	return true
  }
	if(getCouleurSol() == Color.green && !estFaceMur()) {
 		avance()
    return true
  } else {
    recule()
    return false
  }
  depart = false
}